// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
{
  "Parameters": {
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8ArtifactHash9F40D7FA": {
      "Description": "Artifact hash for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9": {
      "Description": "S3 bucket for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF": {
      "Description": "S3 key for asset version "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5ArtifactHash482EAAF5": {
      "Description": "Artifact hash for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9": {
      "Description": "S3 bucket for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F": {
      "Description": "S3 key for asset version "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
  },
  "Resources": {
    "TestConfigDFE7B72C": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8ArtifactHash9F40D7FA": {
      "Description": "Artifact hash for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9": {
      "Description": "S3 bucket for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF": {
      "Description": "S3 key for asset version "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5ArtifactHash482EAAF5": {
      "Description": "Artifact hash for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9": {
      "Description": "S3 bucket for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F": {
      "Description": "S3 key for asset version "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2ArtifactHash98FCBBD2": {
      "Description": "Artifact hash for asset "f637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2"",
      "Type": "String",
    },
    "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2S3Bucket9DEAFD96": {
      "Description": "S3 bucket for asset "f637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2"",
      "Type": "String",
    },
    "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2S3VersionKeyB01F7916": {
      "Description": "S3 key for asset version "f637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2S3Bucket9DEAFD96",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2S3VersionKeyB01F7916",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersf637eada4d7c7f7206af045a45bf30ac483f8ab7cf2237edae663482ec3a39b2S3VersionKeyB01F7916",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "customUserAgent": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8ArtifactHash9F40D7FA": {
      "Description": "Artifact hash for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9": {
      "Description": "S3 bucket for asset "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF": {
      "Description": "S3 key for asset version "6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8"",
      "Type": "String",
    },
    "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797ArtifactHash29B97AC0": {
      "Description": "Artifact hash for asset "b1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797"",
      "Type": "String",
    },
    "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797S3Bucket370C7A2F": {
      "Description": "S3 bucket for asset "b1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797"",
      "Type": "String",
    },
    "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797S3VersionKey6859C342": {
      "Description": "S3 key for asset version "b1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5ArtifactHash482EAAF5": {
      "Description": "Artifact hash for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9": {
      "Description": "S3 bucket for asset "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
    "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F": {
      "Description": "S3 key for asset version "db386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3BucketBD7BF4A9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdb386d2161f7d6a70f0cce2a6962f1667aa9d68971c708792ec8a87a5c6e74f5S3VersionKeyD7DBED4F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3BucketB4F4C4F9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters6cd678c843d81a46b541ba66d41e0d9609639d3e0465c5dddcca74f1db4509b8S3VersionKey3A6052CF",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797S3Bucket370C7A2F",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797S3VersionKey6859C342",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersb1ca903e2560d41c92d1b702f7e2f764d7a277170d88d5e14b141a38f4ff3797S3VersionKey6859C342",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "user_agent_extra": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
